Add lazy stream representation.